# dcm2niixpy

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: automerge.yml  release.yml  test.yml
dcm2niixpy/: __init__.py  dcm2niix.py
docs/: conf.py  dcm2niixpy.rst  index.rst  modules.rst  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: tutorial.rst
tests/: conftest.py  test_download.py
tests/data/: sources.txt
tests/data/BRAIN_MR/: IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm  IM-0001-0019.dcm  IM-0001-0020.dcm  IM-0001-0021.dcm  IM-0001-0022.dcm  IM-0001-0023.dcm  IM-0001-0024.dcm  IM-0001-0025.dcm  IM-0001-0026.dcm  IM-0001-0027.dcm  IM-0001-0028.dcm  IM-0001-0029.dcm  IM-0001-0030.dcm  IM-0001-0031.dcm  IM-0001-0032.dcm  IM-0001-0033.dcm  IM-0001-0034.dcm  IM-0001-0035.dcm  IM-0001-0036.dcm  IM-0001-0037.dcm  IM-0001-0038.dcm  IM-0001-0039.dcm  IM-0001-0040.dcm  (+152 more)
tests/test_example/: test_some_function.py
tests/test_options/: test_adjacent_dicoms.py  test_compression.py  test_compression_level.py
tests/test_running/: test_convert_options_to_args.py  test_running_no_input.py
