[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dcm2niixpy"
description = "Python package of dcm2niix"
version = "0.4.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/Svdvoort/dcm2niixpy"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.9"
spython = "^0.1.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-memprof = "^0.2.0"
pytest-cov = "^3.0.0"
pytest-datafiles = "^2.0"
pytest-xdist = "^2.5.0"
xdoctest = "^0.15.10"

darglint = "^1.8.1"

black = "^21.10b0"

mypy = "^0.931"

pre-commit = "^2.17.0"

unimport = "^0.9.4"

Sphinx = "^4.3.2"
sphinx-autodoc-typehints = "^1.16.0"
recommonmark = "^0.7.1"
sphinx_rtd_theme = "^1.0.0"

flake8 = "^4.0.1"
flake8-2020 = "^1.6.1"
flake8-aaa = "^0.12.2"
flake8-annotations = "^2.7.0"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.5"
flake8-assertive = "^2.0.0"
flake8-black = "^0.2.4"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.2.0"
flake8-executable = "^2.0.3"
flake8-expression-complexity = "^0.0.9"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.6"
flake8-import-order = "^0.18.1"
flake8-isort = "^4.1.1"
flake8-logging-format = "^0.6.0"
flake8-markdown = "^0.3.0"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.15.0"
flake8-plugin-utils = "^1.3.2"
flake8-polyfill = "^1.0.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
flake8-quotes = "^3.3.1"
flake8-requirements = "^1.5.2"
flake8-rst = "^0.8.0"
flake8-rst-docstrings = "^0.2.5"
flake8-string-format = "^0.3.0"
flake8-typing-imports = "^1.12.0"
flake8-variables-names = "^0.0.4"
pep8-naming = "^0.12.1"
pandas-vet = "^0.2.2"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']

[tool.isort]
line_length = 100
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
skip_glob = ["*/setup.py"]
filter_files = true

[tool.darglint]
docstring_style = "google"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
